@@ -1,6 +1,6 @@
 ;;; w3m-proc.el --- Functions and macros to control sub-processes
 
-;; Copyright (C) 2001, 2002, 2003, 2004, 2005, 2007
+;; Copyright (C) 2001, 2002, 2003, 2004, 2005, 2007, 2008, 2009
 ;; TSUCHIYA Masatoshi <tsuchiya@namazu.org>
 
 ;; Authors: TSUCHIYA Masatoshi <tsuchiya@namazu.org>,
@@ -57,7 +57,8 @@
   (defvar w3m-async-exec)
   (defvar w3m-process-connection-type)
   (defvar w3m-process-modeline-format)
-  (defvar w3m-work-buffer-list))
+  (defvar w3m-work-buffer-list)
+  (autoload 'w3m-idle-images-show-unqueue "w3m"))
 
 ;; Silence the Emacs' byte-compiler that says ``might not be defined''.
 (eval-when-compile
